force-app/main/default/objects/Account/fields/Owlin_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Owlin_Entity_Id__c</fullName>
    <label>Owlin Entity Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>