force-app/main/default/objects/Account/fields/Owlin_Entity_Requested_Id__c.field-meta.xml
<CustomField>
    <fullName>Owlin_Entity_Requested_Id__c</fullName>
    <description>This is batch id in which entity was requested to Owlin</description>
    <label>Owlin Entity Requested Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>