force-app/main/default/objects/Account/fields/Owlin_Link_Requested__c.field-meta.xml
<CustomField>
    <fullName>Owlin_Link_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owlin Link Requested</label>
    <type>Checkbox</type>
</CustomField>